# Data-Pro-Skill

./: .clinerules  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.zh-CN.md  SKILL.md  VERSIONING.md  bla.md  constitution.md  coonversa.md  diff_report.txt  notebooklm_mcprepo.md  package.json  project.md  pyproject.toml
.agent/: constitution.md
.agent/references/: agent_guide.md  structure.json
.agent/rules/: architecture.md  coding-standards.md  data-governance.md
.agent/workflows/: bootstrap-structure.md  build-project-rules.md  context-bootstrap.md  discovery-completion.md  document-study.md  knowledge-management.md  process-contribution.md  project-context.md  project-discovery.md  project-evolution.md  (+3 more)
.antigravitycli/: 4968a6ee-15a7-475d-9339-9a0f1a8c5171.json
.githooks/: pre-commit
.github/: pull_request_template.md
.out-of-scope/: agent-template-rendering.md  temporal-context.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.plans/: 1755-install-audit-fix.md
agents/: agent-anthropologist.md  agent-critic.md  agent-statistician.md  agent-strategist.md  agent-tufte-designer.md  gsd-executor.md  gsd-intel-updater.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-verifier.md
context/: data-analysis-report-framework.md  practical-examples-templates.md
docs/: ARCHITECTURE.md  CANARY.md  CLI-TOOLS.md  COMMANDS.md  CONFIGURATION.md  FEATURES.md  INVENTORY-MANIFEST.json  INVENTORY.md  README.md  RELEASE-v1.39.0-rc.4.md  RELEASE-v1.39.0-rc.5.md  RELEASE-v1.39.0-rc.6.md  RELEASE-v1.39.0-rc.7.md  RELEASE-v1.40.0-rc.1.md  RELEASE-v1.41.0.md  RELEASE-v1.42.0-rc.1.md  RELEASE-v1.42.1.md  RELEASE-v1.42.3.md  RELEASE-v1.50.0-canary.1.md  STATE-MD-LIFECYCLE.md  TESTING-SUITES.md  USER-GUIDE.md  branch-protection.md  branching.md  context-monitor.md  contributor-standards.md  manual-update.md  quickstart.md  tutorials.md
harvest/: absorption_priorities.md  cycle3_summary.md  overview.md
hooks/: gsd-check-update-worker.js  gsd-context-monitor.js  gsd-graphify-update.sh  gsd-statusline.js  gsd-workflow-guard.js
notebooks/: demo.ipynb
outputs/: 00_profile.json  00_project_manifest.md  00_walking_skeleton_manifest.md  verification_report.json
references/: agent-loop.md  dps-clarify.md  dps-cross.md  dps-export.md  dps-inject-open.md  dps-plan.md  dps-setup.md  modes.md  tufte-rules.md
scripts/: advanced_analytics_generator.py  qualitative_categorizer.py  survey_report_generator.py  tufte_html.py  tufte_viz.py  turf_analysis.py
(+533 files in other folders)
